# xa-func-tools

./: .gitignore  LICENSE  README.md  commit_progress.py  pyproject.toml
examples/: main_ex.py  seo_competitor_analysis.py  web_browsing_agent.py  web_premium_scraper.py  web_scraping_agent.py
experiments/: config.yml
src/: __init__.py
src/experiments/: tracking.py
src/function_calling/: __init__.py  core.py  models.py
src/function_calling/tools/: __init__.py  arxiv_tool.py  research_pipeline.py  url_context.py  web_browser.py  web_scraper.py  web_search.py
src/function_calling/utils/: __init__.py  utils.py  xa_logger.py
src/prompts/: executor.md
